# KeyInfrastructure

./: .gitignore  AGENTS.md  GEMINI.md  README.md  docker-compose.yml  mvp.md  onboarding.md  prepare_environment.sh
.ai/: auth.md  certificate_generation.mmd  db-plan.md  db-summary.md  prd.md  prd_plan.md  prd_summary.md  tech-stack.md
.cursor/rules/: rust.mdc
.github/workflows/: backend.yml  frontend.yml
backend/: .test-env  AGENTS.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  project.mmd
backend/.ai/: api-plan.md  rest-plan.md  test-plan.md
backend/.ai/rules/: refactor-rust.md  rust-change.md
backend/src/: auth.rs  certificate.rs  db_model.rs  errors.rs  http_app.rs  lib.rs  main.rs  middleware.rs
backend/test/: test_all.sh  test_login.sh  test_register.sh  test_register_and_login.sh
backend/test_ca/: ca.crt  ca.key
backend/tests/: README.md  integration_tests.rs
backend/tests/bash/: test_register_and_login.sh
database/: create_tables.sql  db-summary.md  diagram.mmd
doc/: auth-spec.md  tech-stack.md
frontend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  astro.config.ts  eslint.config.js  package-lock.json  package.json
frontend/.ai/: ui-architecture-summary.md  ui-plan.md
frontend/.ai/rules/: diagnose-react.md  refactor-react.md
frontend/.cursor/rules/: backend.mdc  shared.mdc
frontend/src/: env.d.ts  types.ts
frontend/src/components/: AdminDashboard.tsx  AdminHeader.tsx  AdminStats.tsx  AuthContext.tsx  CertificateTable.tsx  CertificatesPageHeader.tsx  CreateCertificateButton.tsx  CreateCertificateForm.tsx  (+9 more)
(+29 files in other folders)
