[package]
name = "login"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.6"
