[package]
name = "login"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.6"
log = "0.4"
env_logger = "0.11"
