[package]
name = "key_infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
bcrypt = "0.15"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
thiserror = "1.0"
serde_json = "1.0"
actix-http = "3.11.2"
openssl = "0.10.75"
base64 = "0.22.1"
